--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>THAF</title>
-    <link href="style.css" rel="stylesheet" type="text/css"
+    <link href="styles.css" rel="stylesheet" type="text/css"
   </head>
   <body>
     <ul class="nav">
