--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
 
       <li><a href="https://thafgaming.github.io">Home</a></li>
-      <li><a href="https://thafgaming.github.io/about.html">About</a></li>
+      <li><a href="https://thafgaming.github.io/about">About</a></li>
       <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
   </body>
 </html>
