--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@
       <li><a href="https://thafgaming.github.io">Home</a></li>
       <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
 
-
+      <h1> This Is The About Page </h1>
   </body>
 </html>
