--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
       <li><a href="https://thafgaming.github.io">Home</a></li>
       <li><a href="https://thafgaming.github.io/about">About</a></li>
       <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
+      
+      <h1> This Is Home Page </h1>
   </body>
 </html>
