--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 
       <li><a href="https://thafgaming.github.io">Home</a></li>
       <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
+      <li><a href="#">Social</a></li>
       
     </ul>
     
