--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>THAF</title>
     <link href="styles.css" rel="stylesheet" type="text/css"
   </head>
-  <body>
+  <body style="background-color: #0d3b3d">
     <ul class="nav">
 
       <div class="logo">
