--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="https://thafgaming.github.io">Home</a></li>
       <li><a href="https://thafgaming.github.io/about">About</a></li>
       <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
-      <li><a href="#">Social</a></li>
+      <li><a href="https://www.twitch.tv/thafgaming">Twitch</a></li>
       
     </ul>
       
