--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
       <li><a href="https://thafgaming.github.io">Home</a></li>
       <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
-      <li><a href="#">Social</a></li>
+      <li><a href="https://www.twtich.tv/thafgaming">Twitch</a></li>
       
     </ul>
     
