--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
       <li><a href="https://thafgaming.github.io">Home</a></li>
       <li><a href="https://thafgaming.github.io/about">About</a></li>
-      <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
-      <li><a href="https://www.twitch.tv/thafgaming">Twitch</a></li>
+      <li><a href="https://discord.gg/5ajxzmP5"><img src="Uplink_Icon_Discord.png"></a></li>
+      <li><a href="https://www.twitch.tv/thafgaming"><img src="Uplink_Icon_Twitch.png></a></li>
       
     </ul>
       
