--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
       </div>
 
       <li><a href="https://thafgaming.github.io">Home</a></li>
-      <li><a href="https://discord.gg/5ajxzmP5">Join</a></li>
-      <li><a href="https://www.twtich.tv/thafgaming">Twitch</a></li>
+      <li><a href="https://discord.gg/5ajxzmP5"><img src"Uplink_Icon_Discord.png></a></li>
+      <li><a href="https://www.twtich.tv/thafgaming"><img src="Uplink_Icon_Twitch.png></a></li>
       
     </ul>
     
