--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>THAF</title>
     <link href="style.css" rel="stylesheet" type="text/css"
   </head>
-  <body style="background-color: #0d3b3d">
+  <body style="background-color: #ffaa00">
     <ul class="nav">
 
       <div class="logo">
