--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <a href="https://thafgaming.github.io">LOGO</a>
       </div>
 
-      <li><a href="https://www.twitter.com/THAFGaming"><img src="Uplink_Icon_Twitter.png></a></li>
+      <li><a href="https://www.twitter.com/THAFGaming"><img src="Uplink_Icon_Twitter.png"></a></li>
       <li><a href="https://www.instagram.com/THAFGAMING2021"><img src="Uplink_Icon_Instagram.png"></a></li>
       <li><a href="https://discord.gg/5ajxzmP5"><img src="Uplink_Icon_Discord.png"></a></li>
       <li><a href="https://www.twitch.tv/thafgaming"><img src="Uplink_Icon_Twitch.png"></a></li>
