--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul class="nav">
 
       <div class="logo">
-         <img src="#">LOGO</a>
+         <img src="thaf_logo.png"></a>
       </div>
 
       <li><a href="https://www.twitter.com/THAFGaming"><img src="Uplink_Icon_Twitter.png"></a></li>
