--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body style="background-color: #ffaa00">
     <ul class="nav">
 
-     <img src="thaf_logo1.png" align="left"></a>
+     <img src="thaf_logo1.png"></a>
      
 
       <li><a href="https://www.twitter.com/THAFGaming"><img src="Uplink_Icon_Twitter.png"></a></li>
