--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body style="background-color: #ffaa00">
     <ul class="nav">
-
+      
+      <div class="logo">
      <img src="thaf_logo1.png"></a>
+      </div>
      
 
       <li><a href="https://www.twitter.com/THAFGaming"><img src="Uplink_Icon_Twitter.png"></a></li>
