--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul class="nav">
       
       <div class="logo">
-     <img src="thaf_logo1.png"></a>
+     <img src="thaf_logo1.png" width="100" height="100"></a>
       </div>
      
 
