--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul class="nav">
       
       <div class="logo">
-     <img src="thaf_logo1.png" width="60" height="60">
+     <img src="thaf_logo1.png" style="width: 60px; height: 60px; position: absolute; top: 25;">
       </div>
      
 
