--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body style="background-color: #ffaa00">
     
-    <div style = "position:relative; top:25;">
-      <img src="thaf_logo1.png" width="60" height="60">
+    <div style = "position:absolute; top:25;">
+      <img src="thaf_logo1.png" style="width: 60px; height: 60px; float: left;>
     </div>
       
      <ul class="nav">
