--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body style="background-color: #ffaa00">
     
-    <div style = "position:absolute; top:25; left:25;">
+    <div style = "position:absolute; top:50;">
       <img src="thaf_logo1.png" style="width: 60px; height: 60px; float: left;>
     </div>
       
