--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body style="background-color: #ffaa00">
    
-    <div style = "position:relative;">
-        <img src="thaf_logo1.png" style="width: 60px; height: 60px; float: left;>
+    <div style = "position:absolute;">
+        <img src="thaf_logo1.png" style="width: 60px; height: 60px;>
       </div>
     
     <ul class="nav">
